--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         document.querySelector('button').addEventListener('click', function () {
             $("#jqGrid").jqGrid("GridUnload");
             $("#jqGrid").jqGrid({
-                //url: 'https://city-id-lookup.herokuapp.com/get_id?name=' + btn_text.value,
-                url: 'http://localhost:8080/get_id?name=' + btn_text.value,
+                url: 'https://city-id-lookup.herokuapp.com/get_id?name=' + btn_text.value,
+                //url: 'http://localhost:8080/get_id?name=' + btn_text.value,
                 mtype: "GET",
                 datatype: "json",
                 colModel: [
