--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 mtype: "GET",
                 datatype: "json",
                 colModel: [
-                    { label: 'Numer ID', name: 'cityId', key: true, width: 75 },
+                    { label: 'Numer ID', name: 'id', key: true, width: 75 },
                     { label: 'Gmina', name: 'name', width: 150 },
                     { label: 'Województwo', name: 'district', width: 150 },
                     { label: 'Powiat', name: 'province', width: 150 },
